added benefits slide

--- a/index.Rmd
+++ b/index.Rmd
@@ -107,6 +107,13 @@ class: center, top
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
 
+## Benefits to Addressing Land Subsidence
+
+
+
+-----
+```{r xaringan-all, echo=FALSE, warning=FALSE}
+```
 
 ## Objectives
 
