--- a/index.Rmd
+++ b/index.Rmd
@@ -264,7 +264,7 @@ class: center, top
 
 ```{r echo=FALSE, out.width='100%', fig.align='center'}
 
-knitr::include_graphics('Img/SlideRA.jpg')
+knitr::include_graphics('SlideRA.jpg')
 
 ```
 
