--- a/index.Rmd
+++ b/index.Rmd
@@ -196,7 +196,8 @@ cond <- read_excel("Conditional_factors.xlsx")
 
 # Display the table using kableExtra with styling
 cond %>%
-  knitr::kable(format = 'html')
+  knitr::kable(format = 'html') %>%
+  kable_styling(full_width = FALSE, font_size = 12)
 ```
 ]
 
@@ -208,7 +209,7 @@ hist <- read_excel("Historical_LS.xlsx")
 
 # Display the table using kableExtra with styling
 hist %>%
-  knitr::kable(format = 'html')
+  knitr::kable(format = 'html') 
 ```
 ]
 
@@ -220,7 +221,7 @@ socioecon <- read_excel("Socio_economic.xlsx")
 
 # Display the table using kableExtra with styling
 socioecon %>%
-  knitr::kable(format = 'html')
+  knitr::kable(format = 'html') 
 ```
 ]
 ]
