--- a/index.Rmd
+++ b/index.Rmd
@@ -87,7 +87,6 @@ xaringanExtra::use_extra_styles(
 ---
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
-class: center, top
 
 ## Highlighting the problem 
 
@@ -111,6 +110,7 @@ class: center, top
 
 ]
 ]
+
 ---
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
@@ -123,7 +123,6 @@ class: center, top
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
-
 ---
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
@@ -133,6 +132,9 @@ class: center, top
 
 
 ---
+```{r xaringan-all, echo=FALSE, warning=FALSE}
+```
+
 ## Impact of land subsidence  
 
 .panelset[
