--- a/index.Rmd
+++ b/index.Rmd
@@ -114,6 +114,102 @@ xaringanExtra::use_extra_styles(
 ]
 
 ---
+```{r xaringanExtra-freezeframe, echo=FALSE, warning=FALSE}
+xaringanExtra::use_freezeframe()
+
+knitr::include_graphics('jakarta_sinking_animated.gif')
+```
+
+## Causes of Subsidence
+
+* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
+
+* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
+
+* Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities.
+
+---
+```{r xaringan-all, echo=FALSE, warning=FALSE}
+```
+
+## Impact of land subsidence  
+
+.panelset[
+
+.panel[.panel-name[Infrastructure]
+
+* Cracking of permanent constructions and roads.
+
+* Tilting of houses and buildings.
+
+* “Sinking” of houses and buildings.
+
+* Breaking of underground pipelines and utilities.
+
+* Malfunction of sewerage and drainage system 
+ 
+* Deterioration in function of building and infrastructures
+
+]
+
+.panel[.panel-name[Environment]
+
+* Changes in river canal and drain flow systems indirect.
+
+* Frequent coastal flooding.
+
+* Wider expansion of flooding areas. 
+
+* Inundated areas and infrastructures.
+
+* Increased inland sea water intrusion.
+
+* Deterioration in quality of environmental condition
+
+]
+
+.panel[.panel-name[Economic]
+
+* Increase in maintenance cost of infrastructure.
+
+* decrease in land and property values.
+
+* Abandoned buildings and facilities.
+
+* Disruption to economic activities
+]
+
+.panel[.panel-name[Social]
+
+* Deterioration in quality of living environment and life health and 
+
+
+* disruprion to daily activities of people.
+]
+]
+
+---
+
+## Criticism to the wall approach
+.pull-left[
+* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
+
+* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+
+* High cost of construction and maintenance. 
+
+* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+]
+
+.pull-right[
+
+* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
+
+* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
+
+]
+---
+
 ## Global agendas and goals 1
 ###  The Sendai Framework for Disaster Risk Reduction (2015)
 
@@ -209,83 +305,16 @@ knitr::include_graphics("E_PRINT_15.jpg")
 ]
 
 ---
-```{r xaringanExtra-freezeframe, echo=FALSE, warning=FALSE}
-xaringanExtra::use_freezeframe()
 
-knitr::include_graphics('jakarta_sinking_animated.gif')
-```
-
-
-
-## Causes of Subsidence
-
-* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
-
-* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
-
-* Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
-
----
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
 
-## Impact of land subsidence  
-
-.panelset[
-
-.panel[.panel-name[Infrastructure]
-
-* Cracking of permanent constructions and roads.
-
-* Tilting of houses and buildings.
-
-* “Sinking” of houses and buildings.
-
-* Breaking of underground pipelines and utilities.
-
-* Malfunction of sewerage and drainage system 
- 
-* Deterioration in function of building and infrastructures
-
-]
-
-.panel[.panel-name[Environment]
-
-* Changes in river canal and drain flow systems indirect.
-
-* Frequent coastal flooding.
-
-* Wider expansion of flooding areas. 
-
-* Inundated areas and infrastructures.
-
-* Increased inland sea water intrusion.
-
-* Deterioration in quality of environmental condition
-
-]
-
-.panel[.panel-name[Economic]
-
-* Increase in maintenance cost of infrastructure.
-
-* decrease in land and property values.
-
-* Abandoned buildings and facilities.
-
-* Disruption to economic activities
-]
-
-.panel[.panel-name[Social]
-
-* Deterioration in quality of living environment and life health and 
+## Compliance with the agenda
 
 
-* disruprion to daily activities of people.
-]
-]
 
 ---
+
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
 
@@ -302,25 +331,7 @@ knitr::include_graphics('jakarta_sinking_animated.gif')
 - To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table
 
 ---
-## Criticism to the wall approach
-.pull-left[
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
 
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
-
-* High cost of construction and maintenance. 
-
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
-]
-
-.pull-right[
-
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
-
-* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
-
-]
----
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
 
