--- a/index.Rmd
+++ b/index.Rmd
@@ -94,7 +94,9 @@ xaringanExtra::use_extra_styles(
 
 .panel[.panel-name[The Sinking Capital]
 
-* Jakarta, the capital of Indonesia, has been at risk of becoming the first megacity to completely sink. This is attributed to factors such as rising sea levels, land subsidence, construction on soft sediments, and natural sediment compaction. The northern part of Jakarta currently sits approximately 2.5 meters below sea level, with estimates indicating that by 2050, 40% of the area will be sunk. Each year, Jakarta experiences between 1 to 10 sinking incidents. 
+* Jakarta, the capital of Indonesia, has been at risk of becoming the first megacity to completely sink. This is attributed to factors such as rising sea levels, land subsidence, construction on soft sediments, and natural sediment compaction. 
+
+* The northern part of Jakarta currently sits approximately 2.5 meters below sea level, with estimates indicating that by 2050, 40% of the area will be sunk. Each year, Jakarta experiences between 1 to 10 sinking incidents. 
 
 ]
 
@@ -108,7 +110,11 @@ xaringanExtra::use_extra_styles(
 
 .panel[.panel-name[The Main Cause]
 
-* Land subsidence in Jakarta displays spatial and temporal variations, typically occurring at rates of approximately 3 to 10 centimetre's per year. Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete. Furthermore, accurately estimating and modelling the contribution of each causative factor to observed land subsidence in specific areas is still necessary
+* Land subsidence in Jakarta displays spatial and temporal variations, typically occurring at rates of approximately 3 to 10 centimetre's per year. 
+
+* Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete. 
+
+* Accurately estimating and modelling the contribution of each causative factor to observed land subsidence in specific areas is still necessary.
 
 ]
 ]
@@ -209,21 +215,29 @@ knitr::include_graphics("E_PRINT_15.jpg")
 ]
 
 ---
-```{r xaringanExtra-freezeframe, echo=FALSE, warning=FALSE}
-xaringanExtra::use_freezeframe()
+```{r echo=FALSE, fig.width=5, warning=FALSE}
 
-knitr::include_graphics('jakarta_sinking_animated.gif')
+
 ```
-
-
 
 ## Causes of Subsidence
 
-* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
+.pull-left[
+* Physical factors: earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently (Bott et al., 2021).
 
-* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
+* Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
+
+]
+
+
+.pull-right[
+
+
+
+<img src="jakarta_sinking_animated.gif" width="320" height="240" />
+]
 
 ---
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
